@@ -219,6 +219,9 @@ And now, in mostly alphabetical order, the scripts:
 - wnpp-alert: list installed packages which are orphaned or up for adoption
   [wget]
 
+- wnpp-check: check whether there is an open request for packaging or
+  intention to package bug for a package [wget]
+
 - /usr/share/doc/devscripts/examples: This directory contains examples of
   procmail and exim scripts for sorting mail arriving to Debian
   mailing lists.
