@@ -525,3 +525,7 @@
 ##### wnpp-alert
 # 
 # No variables currently
+
+##### wnpp-check
+#
+# No variables currently
