@@ -37,7 +37,7 @@ the GPL, version 2 or later.
 
     b) the "Artistic License" which comes with Perl.
 
-- whodepends and wnpp-alert are in the public domain
+- whodepends, wnpp-alert and wnpp-check are in the public domain
 
 On Debian GNU/Linux systems, the complete text of the GNU General
 Public License can be found in `/usr/share/common-licenses/GPL' and
