@@ -117,5 +117,7 @@
 	fr:fr/who-uploads.fr.1 add_fr:add_fr/translator_man.add
 [type:man] ../scripts/wnpp-alert.1 \
 	fr:fr/wnpp-alert.fr.1 add_fr:add_fr/translator_man.add
+[type:man] ../scripts/wnpp-check.1 \
+	fr:fr/wnpp-check.fr.1 add fr:add fr/translator_man.add
 [type:man] ../scripts/devscripts.conf.5 \
 	fr:fr/devscripts.conf.fr.5 add_fr:add_fr/translator_man.add
